--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@
 <button class="btn-financeiro" onclick="mostrarMensagem('msg34')">ENVIO PARA COBRANÇA</button>
 <button class="btn-informativo" onclick="mostrarMensagem('msg35')">SITE MEU IP</button>
 <button class="btn-lentidao" onclick="mostrarMensagem('msg37')">INSERIR EM LENTIDÃO</button>
+<button class="btn-financeiro" onclick="mostrarMensagem('msg38')">INSERIR EM LENTIDÃO</button>
+
 
 
 </div>
@@ -641,6 +643,19 @@ Inclusive pedido evidências de lentidão ao cliente como testes de velocidade e
 
  </textarea>
   <button class="save-button" onclick="salvarTexto('texto37')">Salvar</button>
+</div>
+
+        <!-- LOGIN ATIVADO-->
+<div class="mensagem-container" id="msg38">
+  <button class="copy-button" onclick="copiarTexto('texto38')">Copiar</button>
+  <textarea class="editable-text" id="texto38" readonly>
+Realizei algumas configurações agora. Peço que desligue o equipamento da tomada e aguarde 10 minutos. Depois, religue e verifique se a conexão voltou.
+
+É importante também que verifique se seus aparelhos, como celular, estão conectados corretamente na rede Wi-Fi.
+
+Assim que concluir o teste, me confirme aqui respondendo com “CONEXÃO VOLTOU” (caso funcione) ou informando que ainda não voltou, para que eu possa dar continuidade no atendimento.
+ </textarea>
+  <button class="save-button" onclick="salvarTexto('texto38')">Salvar</button>
 </div>
 
 
