--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 <button class="btn-financeiro" onclick="mostrarMensagem('msg34')">ENVIO PARA COBRANÇA</button>
 <button class="btn-informativo" onclick="mostrarMensagem('msg35')">SITE MEU IP</button>
 <button class="btn-lentidao" onclick="mostrarMensagem('msg37')">INSERIR EM LENTIDÃO</button>
-<button class="btn-financeiro" onclick="mostrarMensagem('msg38')">INSERIR EM LENTIDÃO</button>
+<button class="btn-financeiro" onclick="mostrarMensagem('msg38')">LIBERAR CONEXÃO</button>
 
 
 
