--- a/index.html
+++ b/index.html
@@ -451,9 +451,14 @@ Agradecemos desde já pela colaboração.
 <div class="mensagem-container" id="msg22">
   <button class="copy-button" onclick="copiarTexto('texto22')">Copiar</button>
   <textarea class="editable-text" id="texto22" readonly>
-Entendi, nesse caso, que a luz vermelha é sinal de fibra rompida. Será necessário agendar uma visita com um técnico para realizar a manutenção presencial e restabelecer a sua conexão. 
+Entendi, nesse caso, que a luz vermelha é sinal de fibra rompida. Será necessário agendar uma visita com um técnico para realizar a manutenção presencial e restabelecer a sua conexão.
 
 Peço que aguarde um momento enquanto preencho os dados e realizo o agendamento.
+
+Enquanto isso, poderia me informar qual prioridade de turno o(a) senhor(a) prefere para a visita: manhã ou tarde?
+Ainda irei confirmar a disponibilidade com o setor responsável. Caso não seja possível no turno escolhido, informarei aqui a alternativa disponível.
+
+Se for extremamente necessário, também posso registrar um horário específico. Porém, é importante destacar que os técnicos atuam em rota: ao finalizar um atendimento, eles já seguem para o próximo, e o tempo pode variar de acordo com cada serviço.          
   </textarea>
   <button class="save-button" onclick="salvarTexto('texto22')">Salvar</button>
 </div>
