--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Conto com seu apoio e te desejo uma ótima noite!
 </div>
 <div class="mensagem-container" id="msg5">
 <button class="copy-button" onclick="copiarTexto('texto5')">Copiar</button>
-<textarea class="editable-text" id="texto5" readonly="">Gostaria de lhe dar uma dica em relação à TV Box. A senhora pode adquirir um cabo de rede (barra 1000) em uma loja de informática e conectar o aparelho da TV Box diretamente no roteador. Isso pode melhorar a sua conexão.</textarea>
+<textarea class="editable-text" id="texto5" readonly="">Gostaria de lhe dar uma dica em relação à TV Box. O(a) senhor(a) pode adquirir um cabo de rede (barra 1000) em uma loja de informática e conectar o aparelho da TV Box diretamente no roteador. Isso pode melhorar a sua conexão.</textarea>
 <button class="save-button" onclick="salvarTexto('texto5')">Salvar</button>
 </div>
 
@@ -312,8 +312,6 @@ Desde já, agradeço imensamente pelo seu tempo e apoio! 🙏
 Nossos técnicos atuam de 8h até 18h. Não tenho como informar um horário fixo, porque eles atuam por rota. Assim que eles estiverem saindo, ele vai entrar em contato. Tudo bem?
 
 Senhor(a). Informamos que o agendamento está realizado para (dia). Pedimos, por gentileza, que haja um adulto presente no local para receber o técnico. Pode confirmar por favor?
-
-Caso queira, eu posso colocar uma observação referente a horário ou período (manhã ou tarde), pode me informar?
   </textarea>
   <button class="save-button" onclick="salvarTexto('texto11')">Salvar</button>
 </div>
@@ -322,9 +320,7 @@ Caso queira, eu posso colocar uma observação referente a horário ou período 
 <div class="mensagem-container" id="msg12">
   <button class="copy-button" onclick="copiarTexto('texto12')">Copiar</button>
   <textarea class="editable-text" id="texto12" readonly>
-Peço desculpas pela demora no atendimento. Mas fique tranquilo(a), sua solicitação está na aqui na minha fila e será atendida o mais breve possível. Agradeço muito pela paciência e compreensão! 💙
-
-Só um momento, por favor, vou verificar o seu cadastro, peço que aguarde um momento, estamos com um alto fluxo de clientes nesse momento, mas fique tranquilo que vou lhe atender.
+Peço desculpas pela demora no atendimento estamos com um  alto fluxo de cliente no momento que pode estar impactando no tempo de atendimento. Mas fique tranquilo(a), sua solicitação está na aqui na minha fila e será atendida o mais breve possível. Agradeço muito pela paciência e compreensão! 💙
   </textarea>
   <button class="save-button" onclick="salvarTexto('texto12')">Salvar</button>
 </div>
@@ -454,11 +450,6 @@ Agradecemos desde já pela colaboração.
 Entendi, nesse caso, que a luz vermelha é sinal de fibra rompida. Será necessário agendar uma visita com um técnico para realizar a manutenção presencial e restabelecer a sua conexão.
 
 Peço que aguarde um momento enquanto preencho os dados e realizo o agendamento.
-
-Enquanto isso, poderia me informar qual prioridade de turno o(a) senhor(a) prefere para a visita: manhã ou tarde?
-Ainda irei confirmar a disponibilidade com o setor responsável. Caso não seja possível no turno escolhido, informarei aqui a alternativa disponível.
-
-Se for extremamente necessário, também posso registrar um horário específico. Porém, é importante destacar que os técnicos atuam em rota: ao finalizar um atendimento, eles já seguem para o próximo, e o tempo pode variar de acordo com cada serviço.          
   </textarea>
   <button class="save-button" onclick="salvarTexto('texto22')">Salvar</button>
 </div>
