--- a/index.html
+++ b/index.html
@@ -625,8 +625,11 @@ Obrigado pela colaboração!
   <button class="copy-button" onclick="copiarTexto('texto36')">Copiar</button>
   <textarea class="editable-text" id="texto36" readonly>
 Entendi. Sua TV está conectada à internet via cabo de rede ou via Wi-Fi (como no celular)?
-Você poderia me enviar um vídeo mostrando a lentidão ou o problema de conexão que está acontecendo nela?
- </textarea>
+
+SUA TV É UMA TVBOX OU IPTV ?
+         
+Envia um vídeo mostrando a lentidão ou o problema de conexão que está acontecendo nela, por favor!
+</textarea>
   <button class="save-button" onclick="salvarTexto('texto36')">Salvar</button>
 </div>
 
