--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Conto com seu apoio e te desejo uma ótima noite!
 </div>
 <div class="mensagem-container" id="msg5">
 <button class="copy-button" onclick="copiarTexto('texto5')">Copiar</button>
-<textarea class="editable-text" id="texto5" readonly="">Gostaria de lhe dar uma dica em relação à TV Box. O(a) senhor(a) pode adquirir um cabo de rede (barra 1000) em uma loja de informática e conectar o aparelho da TV Box diretamente no roteador. Isso pode melhorar a sua conexão.</textarea>
+<textarea class="editable-text" id="texto5" readonly="">Gostaria de lhe dar uma dica em relação à TV Box/IPTV. O(a) senhor(a) pode adquirir um cabo de rede (barra 1000) em uma loja de informática e conectar o aparelho da TV Box diretamente no roteador. Isso pode melhorar a sua conexão.</textarea>
 <button class="save-button" onclick="salvarTexto('texto5')">Salvar</button>
 </div>
 
