--- a/index.html
+++ b/index.html
@@ -1268,7 +1268,7 @@ function gerarMensagem1() {
   const obs = document.getElementById("obs").value;
 
   const msg = 
-`📅 *SOLICITAÇÃO DE VAGA*
+`MANUTENÇÃO
 🧑‍💻 ATENDENTE: ${atendente}
 👱 CLIENTE: ${name}
 📍 LOCALIZAÇÃO: ${loc}
