--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <div class="app">
   <!-- SIDEBAR -->
   <aside class="sidebar" role="navigation">
-    <h2>📌 Atendimentos</h2>
+    <h2><i class="fa-solid fa-headset"></i> Atendimentos</h2>
     <div class="tab active" data-target="mensagens" onclick="openTab(event)">💬 Mensagens prontas</div>
     <div class="tab" data-target="planilha" onclick="openTab(event)">📋 Planilha de Atendimentos no telefone</div>
     <div class="tab" data-target="report_telefonia" onclick="openTab(event)">📡 Reporte Telefonia</div>
