--- a/index.html
+++ b/index.html
@@ -714,7 +714,9 @@ Isso é muito importante para mim. Boa noite!!!</textarea>
             </div>
           </div>
           <div class="body" id="msg30_body">
-            <textarea id="texto30" class="editable-text" readonly>Muito obrigado pela avaliação de 5 estrelas! Sua confiança e carinho significam muito para mim. ...</textarea>
+            <textarea id="texto30" class="editable-text" readonly>Muito obrigado pela avaliação de 5 estrelas! Sua confiança e carinho significam muito para mim. É uma alegria enorme ter clientes tão especiais como você!
+
+Desejo que sua vida seja sempre iluminada por muitas bênçãos, felicidade e sucesso em todos os caminhos que escolher trilhar. Que você tenha uma noite maravilhosa e uma semana cheia de boas energias, realizações e paz.</textarea>
           </div>
         </div>
 
