--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
     <div class="tab" data-target="agendamentos" onclick="openTab(event)">⏱ Agendamentos sem monitoramento</div>
     <div class="tab" data-target="enviar_lista" onclick="openTab(event)">📤 Enviar lista/dados de agendamentos ao grupo</div>
     <div class="tab" data-target="setor_encaminhamento" onclick="openTab(event)">🔍Consulta Rápida - Setor de Encaminhamento</div>
+    <div class="tab" data-target="setor_encaminhamento" onclick="openTab(event)">💧 Filtar endereço</div>
+
 
   </aside>
 
