--- a/index.html
+++ b/index.html
@@ -1345,7 +1345,7 @@ function gerarMensagem4() {
   const cliente = document.getElementById("cliente4").value;
   const tecnico = document.getElementById("tecnico").value;
   const diaAgendamento = document.getElementById("diaAgendamento").value;
-  const msg = `📄 Cliente 👱 ${cliente} agendado para o técnico 👷 ${tecnico}, para o dia 📅 ${diaAgendamento}, pois o setor de monitoramento estava indisponível.`;
+  const msg = `📄 Cliente  ${cliente} agendado para o técnico  ${tecnico}, para o dia 📅 ${diaAgendamento}, pois o setor de monitoramento estava indisponível.`;
   copiarResultadoTo('#result_agendamentos', msg);
 }
 
